--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -96,4 +96,124 @@
   urldate = {2024-10-28},
 }
 
+@Article{Madni_2018,
+  author       = {Madni, Azad M. and Sievers, Michael},
+  date         = {2018-05},
+  journaltitle = {Systems Engineering},
+  title        = {Model‐based systems engineering: Motivation, current status, and research opportunities},
+  doi          = {10.1002/sys.21438},
+  issn         = {1520-6858},
+  number       = {3},
+  pages        = {172--190},
+  volume       = {21},
+  publisher    = {Wiley},
+}
+
+@Article{Bajaj_2022,
+  author       = {Bajaj, Manas and Friedenthal, Sanford and Seidewitz, Ed},
+  date         = {2022-03},
+  journaltitle = {INSIGHT},
+  title        = {Systems Modeling Language (SysML v2) Support for Digital Engineering},
+  doi          = {10.1002/inst.12367},
+  issn         = {2156-4868},
+  number       = {1},
+  pages        = {19--24},
+  volume       = {25},
+  publisher    = {Wiley},
+}
+
+@Book{Gianni2017,
+  author    = {Gianni, Daniele and D'Ambrogio, Andrea and Tolk, Andreas},
+  date      = {2017},
+  title     = {Modeling and Simulation-Based Systems Engineering Handbook},
+  isbn      = {9781138748941},
+  pages     = {513},
+  publisher = {Taylor \& Francis Group},
+}
+
+@Misc{Mathworks,
+  author  = {Mathworks},
+  title   = {Dynamical System Modeling Using Neural ODE},
+  url     = {https://www.mathworks.com/help/deeplearning/ug/dynamical-system-modeling-using-neural-ode.html},
+  urldate = {2024-11-01},
+}
+
+@Article{Ma_2022,
+  author       = {Ma, Junda and Wang, Guoxin and Lu, Jinzhi and Vangheluwe, Hans and Kiritsis, Dimitris and Yan, Yan},
+  date         = {2022-03},
+  journaltitle = {Applied Sciences},
+  title        = {{Systematic Literature Review of MBSE Tool-Chains}},
+  doi          = {10.3390/app12073431},
+  issn         = {2076-3417},
+  number       = {7},
+  pages        = {3431},
+  volume       = {12},
+  publisher    = {MDPI AG},
+}
+
+@Misc{Modelica2023,
+  author  = {{Modelica Association}},
+  date    = {2023-03-09},
+  title   = {{Modelica® – A Unified Object-Oriented Languagefor Systems Modeling}},
+  url     = {https://specification.modelica.org/maint/3.6/MLS.pdf},
+  urldate = {2024-11-01},
+}
+
+@Misc{FMI2023,
+  author  = {{Modelica Association}},
+  date    = {2023-07-10},
+  title   = {{Functional Mock-up Interface Specification}},
+  url     = {https://fmi-standard.org/docs/3.0.1/},
+  urldate = {2024-11-01},
+}
+
+@Misc{SSP2022,
+  author  = {{Modelica Association}},
+  date    = {2022-07-25},
+  title   = {{System Structure and Parameterization}},
+  url     = {https://ssp-standard.org/publications/SSP101/SystemStructureAndParameterization101.pdf},
+  urldate = {2024-11-01},
+}
+
+@Misc{SysPhS2021,
+  author  = {{Object Management Group Inc.}},
+  date    = {2021-06-01},
+  title   = {{SysML Extension for Physical Interaction and SignalFlow Simulation}},
+  url     = {https://www.omg.org/spec/SysPhS/1.1/PDF},
+  urldate = {2024-11-01},
+}
+
+@Misc{MST2023,
+  author  = {{Mathworks Support Team}},
+  date    = {2023-08-28},
+  title   = {{What are MIL, SIL, PIL, and HIL, and how do they integrate with the Model-Based Design approach?}},
+  url     = {https://www-ah.mathworks.com/matlabcentral/answers/440277-what-are-mil-sil-pil-and-hil-and-how-do-they-integrate-with-the-model-based-design-approach},
+  urldate = {2024-11-01},
+}
+
+@Misc{SystemComposer,
+  author  = {Mathworks},
+  title   = {{System Composer - Design, analyze, and simulate system and software architectures}},
+  url     = {https://www.mathworks.com/products/system-composer.html},
+  urldate = {2024-11-02},
+}
+
+@Article{Simpson_2006,
+  author    = {Simpson, Timothy W. and Siddique, Zahed and Jiao, Jianxin Roger},
+  date      = {2006},
+  title     = {Platform-Based Product Family Development},
+  doi       = {10.1007/0-387-29197-0_1},
+  pages     = {1--15},
+  booktitle = {Product Platform and Product Family Design},
+  isbn      = {9780387291970},
+  publisher = {Springer US},
+}
+
+@Misc{SpeedgoatGmbH,
+  author  = {{Speedgoat GmbH}},
+  title   = {{Rapid Controll Prototyping}},
+  url     = {https://www.speedgoat.com/solutions/testing-workflows/rapid-control-prototyping},
+  urldate = {2024-11-02},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
