--- a/src/include/ownContent/konkluzio.tex
+++ b/src/include/ownContent/konkluzio.tex
@@ -8,7 +8,7 @@ A fejlesztés során feltárásra került, hogy a javasolt előnyök némelyike 
 Ezek esetében megvizsgáltam, hogy használhatóak-e ezek a technikák, melynek során nem találtam kizáró okot a módszerek együttes használatára.
 
 \section{További kutatási és fejlesztési lehetőségek}
-Ezek alapján konzulensemmel fel is vettük a kapcsolatot az eszközt fejlesztő NIST-tel és megkezdtük az együttműködést a két eszköz összekapcsolása érdekében.
-Jelen dolgozat elsődlegesen a validációs technológiák közül a szimulációk integrálásával foglalkozott, mert ezek igényelnek külön környezetekben készített és futtatott modelleket, azonban a jövőben szeretnék több más V\&V technikát is integrálni a módszertanba és ezek függvényében bővíteni a bemutatott esettanulmányt.
 A kódgenerálás kapcsán felmerült, hogy ez az elem elengedhetetlen ahhoz, hogy a módszertan megfeleljen eredeti rendeltetésének, és bemutatásra került a fejlesztés alatt álló SysPhS eszköz is, amely alkalmazásával ez a feladat megoldhat gyorsabban megoldható, mint saját eszköz fejlesztésével.
-Az esettanulmány kidolgozása folyamán a módszertanban azonosítottam több általános mintát, melyeknek egy SysML v2 nyelvi kiterjesztésben való összegyűjtése tovább egyszerűsítené annak használatát, amely előnyös lenne a módszer elterjesztésének esetén. Természetesen a nyelvi kiterjesztés elkészültével újra frissíteném az esettanulmányt, hogy használható legyen a teljesen kiforrott módszertan bemutatására, valamint referenciamodellnek.
+Ezek alapján konzulensemmel fel is vettük a kapcsolatot az eszközt fejlesztő egyik csapattal és megkezdtük az együttműködést a két eszköz összekapcsolása érdekében.
+Jelen dolgozat elsődlegesen a validációs technológiák közül a szimulációk integrálásával foglalkozott, mert ezek igényelnek külön környezetekben készített és futtatott modelleket, azonban a jövőben szeretnék több más V\&V technikát is integrálni a módszertanba és ezek függvényében bővíteni a bemutatott esettanulmányt.
+Az esettanulmány kidolgozása folyamán a módszertanban azonosítottam több általános mintát, melyeknek egy SysML v2 nyelvi kiterjesztésben való összegyűjtése tovább egyszerűsítené azok használatát, amely előnyös lenne a módszer elterjesztésének esetén. Természetesen a nyelvi kiterjesztés elkészültével újra frissíteném az esettanulmányt, hogy használható legyen a teljesen kiforrott módszertan bemutatására, valamint referenciamodellnek.
